--- a/WgWall/ClientApp/package.json
+++ b/WgWall/ClientApp/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --extract-css",
-    "build": "ng build --extract-css",
+    "start": "ng serve",
+    "build": "ng build",
     "build:ssr": "npm run build -- --app=ssr --output-hashing=media",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,44 +13,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/platform-server": "^5.2.11",
-    "@angular/router": "^5.2.11",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
+    "@angular/animations": "^6.1.9",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/platform-server": "^6.1.9",
+    "@angular/router": "^6.1.9",
+    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
+    "ajv": "^6.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1",
     "core-js": "^2.5.7",
     "jquery": "^3.3",
     "popper.js": "^1.14",
-    "rxjs": "^5.5.12",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "^6.2.4",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.11",
+    "@angular/compiler-cli": "^6.1",
+    "@angular/language-service": "^6.1.9",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^6.0.118",
+    "@types/node": "^10.11.4",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "^1.3.1",
     "protractor": "^5.4.1",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "^2.9"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.0"
