using repository abstraction

--- a/WgWall.Data/WgWall.Data.csproj
+++ b/WgWall.Data/WgWall.Data.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WgWall.Data\WgWall.Data.csproj" />
-    <ProjectReference Include="..\WgWall\WgWall.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
   </ItemGroup>
 
 </Project>
