--- a/WgWall/WgWall.csproj
+++ b/WgWall/WgWall.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dto\FrontendUser\" />
+    <ProjectReference Include="..\WgWall.Data\WgWall.Data.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
