db setup finally works

--- a/WgWall/WgWall.csproj
+++ b/WgWall/WgWall.csproj
@@ -31,6 +31,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WgWall.Data\WgWall.Data.csproj" />
+    <ProjectReference Include="..\WgWall.Migrations\WgWall.Migrations.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
@@ -42,7 +45,7 @@
     <Message Importance="high" Text="Restoring dependencies using 'npm'. This may take several minutes..." />
     <Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
   </Target>
-  
+
   <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
