--- a/WgWall.Migrations/WgWall.Migrations.csproj
+++ b/WgWall.Migrations/WgWall.Migrations.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WgWall.Data\WgWall.Data.csproj" />
-    <ProjectReference Include="..\WgWall\WgWall.csproj" />
   </ItemGroup>
 
 </Project>
