--- a/WgWall.Migrations/WgWall.Migrations.csproj
+++ b/WgWall.Migrations/WgWall.Migrations.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\WgWall.Data\WgWall.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
