--- a/WgWall.Test/WgWall.Test.csproj
+++ b/WgWall.Test/WgWall.Test.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Seed\frontend_users.json" />
+    <None Remove="Seed\products.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Seed\frontend_users.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Seed\products.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.3" />
