--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,8 @@ build:
   verbosity: minimal
 
 test_script: 
-    - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/noresults /noisolation /testcontainer:"".\WgWall.Test\bin\Debug\WgWall.Test.dll" -filter:"+[WgWall]*  -[WgWall]WgWall.Properties.*" -excludebyattribute:*.ExcludeFromCodeCoverage* -hideskipped:All -output:.\WgWall_coverage.xml -returntargetcode
+    - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:test -filter:"+[WgWall*]* -[WgWall.Test*]*" -output:".\WgWall_coverage.xml" -oldstyle
+
     - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
     - pip install codecov
     - codecov -f "WgWall_coverage.xml"  
