--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,21 @@
-os: Visual Studio 2017
-build:
-  project: WgWall.sln
-  verbosity: minimal
-
-test_script: 
-    - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:test -filter:"+[WgWall*]* -[WgWall.Test*]*" -output:".\WgWall_coverage.xml" -oldstyle
-
-    - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
-    - pip install codecov
-    - codecov -f "WgWall_coverage.xml"  
-
-cache:
-  - packages -> **\packages.config
+image: Visual Studio 2017
+branches:
+  only:
+  - master
+init:
+  # Good practise, because Windows line endings are different from Unix/Linux ones
+  - cmd: git config --global core.autocrlf true
+install:
+  # Install repo specific stuff here
+before_build:
+  # Display .NET Core version
+  - cmd: dotnet --version
+  # Display minimal restore text
+  - cmd: dotnet restore
+test_script:
+  # run the unit tests (requires changing into the test directory)
+  - cmd: cd WgWall.Test
+  - cmd: dotnet test
+  - cmd: %userprofile%\.nuget\packages\opencover\4.6.519\tools\OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:test -filter:"+[WgWall*]* -[WgWall.Test*]*" -output:".\WgWall_coverage.xml" -oldstyle
+  - cmd: %userprofile%\.nuget\packages\codecov\1.1.0\tools\codecov.exe -f "WgWall_coverage.xml" 
+deploy: off
