--- a/WgWall.Migrations/WgWall.Migrations.csproj
+++ b/WgWall.Migrations/WgWall.Migrations.csproj
@@ -22,5 +22,7 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
   </ItemGroup>
+  
+  <ProjectGuid>{47fa38f8-2cc9-4cf9-9b16-c8b98d02932f}</ProjectGuid>
 
 </Project>
