--- a/WgWall.Test/WgWall.Test.csproj
+++ b/WgWall.Test/WgWall.Test.csproj
@@ -52,5 +52,7 @@
     <ProjectReference Include="..\WgWall.Migrations\WgWall.Migrations.csproj" />
     <ProjectReference Include="..\WgWall\WgWall.csproj" />
   </ItemGroup>
+  
+  <ProjectGuid>{ffba398d-916d-48bc-950d-c8eb40a0ebc2}</ProjectGuid>
 
 </Project>
