starting to write tests

--- a/WgWall.Test/WgWall.Test.csproj
+++ b/WgWall.Test/WgWall.Test.csproj
@@ -17,10 +17,14 @@
     <None Remove="Seed\frontend_users.json" />
     <None Remove="Seed\products.json" />
     <None Remove="Seed\settings.json" />
+    <None Remove="Seed\task_templates.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Seed\frontend_users.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Seed\task_templates.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Seed\settings.json">
