--- a/WgWall/ClientApp/package.json
+++ b/WgWall/ClientApp/package.json
@@ -34,6 +34,7 @@
     "cryptiles": "^4.1.2",
     "hoek": "^5.0.4",
     "jquery": "^3.3",
+    "moment": "^2.22.2",
     "popper.js": "^1.14",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
