--- a/WgWall/ClientApp/package.json
+++ b/WgWall/ClientApp/package.json
@@ -31,6 +31,7 @@
     "angular-in-memory-web-api": "^0.6.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
     "cryptiles": "^4.1.2",
     "hoek": "^5.0.4",
