--- a/WgWall/ClientApp/package.json
+++ b/WgWall/ClientApp/package.json
@@ -27,41 +27,41 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
-    "ajv": "^6.0",
+    "ajv": "^6.9.2",
     "angular-in-memory-web-api": "^0.6.1",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.1",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
-    "core-js": "^2.5.7",
-    "cryptiles": "^4.1.2",
+    "core-js": "^2.6.5",
+    "cryptiles": "^4.1.3",
     "hoek": "^5.0.4",
     "jquery": "^3.3",
     "mobx": "^5.5.2",
     "mobx-angular": "^3.0.1",
     "mobx-utils": "^5.0.4",
     "moment": "^2.22.2",
-    "popper.js": "^1.14",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.0.0-rc.0",
-    "zone.js": "^0.8.26"
+    "popper.js": "^1.14.7",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.6",
+    "@angular-devkit/build-angular": "^0.13.3",
     "@angular/cli": "^6.2.6",
-    "@angular/compiler-cli": "^6.1",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "^6.1",
-    "@types/jasmine": "^2.8",
-    "@types/jasminewd2": "^2.0",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.1",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.1",
+    "karma": "^4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^5.4.1",
+    "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
     "typescript": "^2.9"
