updating to angular 7

--- a/WgWall/ClientApp/package.json
+++ b/WgWall/ClientApp/package.json
@@ -13,22 +13,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/platform-server": "^6.1.10",
-    "@angular/router": "^6.1.10",
-    "@fortawesome/angular-fontawesome": "^0.2.1",
+    "@angular/animations": "^7",
+    "@angular/common": "^7",
+    "@angular/compiler": "^7",
+    "@angular/core": "^7",
+    "@angular/forms": "^7",
+    "@angular/http": "^7",
+    "@angular/platform-browser": "^7",
+    "@angular/platform-browser-dynamic": "^7",
+    "@angular/platform-server": "^7",
+    "@angular/router": "^7",
+    "@fortawesome/angular-fontawesome": "^0.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
-    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^7",
     "ajv": "^6.9.2",
-    "angular-in-memory-web-api": "^0.6.1",
+    "angular-in-memory-web-api": "^0.7",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
@@ -47,14 +47,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.3",
-    "@angular/cli": "^6.2.6",
-    "@angular/compiler-cli": "^7.2.6",
-    "@angular/language-service": "^6.1",
+    "@angular/cli": "^7",
+    "@angular/compiler-cli": "^7",
+    "@angular/language-service": "^7",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.1",
+    "@types/node": "^10.12.27",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "~3.2.1",
+    "jasmine-core": "^3.3",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -64,7 +64,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "^2.9"
+    "typescript": "~3.2"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.0"
