--- a/WgWall/ClientApp/package.json
+++ b/WgWall/ClientApp/package.json
@@ -13,55 +13,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.10",
-    "@angular/common": "^7.2.10",
-    "@angular/compiler": "^7.2.10",
-    "@angular/core": "^7.2.10",
-    "@angular/forms": "^7.2.10",
-    "@angular/http": "^7.2.10",
-    "@angular/platform-browser": "^7.2.10",
-    "@angular/platform-browser-dynamic": "^7.2.10",
-    "@angular/platform-server": "^7.2.10",
-    "@angular/router": "^7.2.10",
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/platform-server": "^7.2.15",
+    "@angular/router": "^7.2.15",
     "@fortawesome/angular-fontawesome": "^0.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
-    "ajv": "^6.10.0",
+    "ajv": "^6.10.2",
     "angular-in-memory-web-api": "^0.7",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.9",
     "cryptiles": "^4.1.3",
+    "extend": ">=3.0.2",
     "hoek": "^5.0.4",
-    "jquery": "^3.3",
-    "mobx": "^5.5.2",
+    "jquery": "^3.4.1",
+    "mobx": "^5.11.0",
     "mobx-angular": "^3.0.1",
-    "mobx-utils": "^5.2.0",
+    "mobx-utils": "^5.4.1",
     "moment": "^2.22.2",
-    "popper.js": "^1.14.7",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.4.0",
-    "zone.js": "^0.8.29",
-    "extend": ">=3.0.2"
+    "popper.js": "^1.15.0",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
-    "@angular/cli": "^7.3.6",
-    "@angular/compiler-cli": "^7.2.10",
-    "@angular/language-service": "^7.2.10",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.14.3",
+    "@types/node": "^10.14.12",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.3",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
