--- a/WgWall/ClientApp/angular.json
+++ b/WgWall/ClientApp/angular.json
@@ -49,6 +49,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 51170,
             "browserTarget": "WgWall:build"
           },
           "configurations": {
